--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,10 @@ name: Auto Release on Commit
 on:
   push:
     branches:
-      - main  # change if your default branch is different
+      - main
+
+permissions:
+  contents: write  # << This is required to create releases
 
 jobs:
   release:
@@ -17,7 +20,6 @@ jobs:
         id: get_version
         run: |
           latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "0")
-          echo "Latest tag: $latest_tag"
           if [ "$latest_tag" = "0" ]; then
             new_version="1"
           else
@@ -32,5 +34,3 @@ jobs:
           tag: ${{ steps.get_version.outputs.new_version }}
           name: Release ${{ steps.get_version.outputs.new_version }}
           body: "Automated release for commit ${{ github.sha }}"
-          draft: false
-          prerelease: false
