--- a/Plugin/FilePicker/app/src/main/AndroidManifest.xml
+++ b/Plugin/FilePicker/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.a2a410.pluginfp">
 
+    <permission
+        android:name="com.a2a410.pluginfp.ACCESS_PLUGIN"
+        android:protectionLevel="signature" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +16,8 @@
         <activity
             android:name=".FilePickerActivity"
             android:exported="true"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar">
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:permission="com.a2a410.pluginfp.ACCESS_PLUGIN">
             <intent-filter>
                 <action android:name="com.a2a410.pluginfp.ACTION_PICK" />
                 <category android:name="android.intent.category.DEFAULT" />
