--- a/Plugin/Java7/DLHandler/app/build.gradle
+++ b/Plugin/Java7/DLHandler/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.a2a410.pluginfp"
+        applicationId "com.a2a410.plugindh"
         minSdk 26
         targetSdk 34
         versionCode 1
@@ -18,10 +18,10 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
-    namespace 'com.a2a410.pluginfp'
+    namespace 'com.a2a410.plugindh'
 }
 
 dependencies {
